# lets-type

./: .gitignore  LICENSE  README.md  ideas.md  lets-type.py  pyproject.toml  setup.py  upload.sh
lets-type/: app.py  graph.py  utils.py
lets_type/: __init__.py  __main__.py  app.py  utils.py
